# ComicJailbreak

./: .gitignore  README.md  attack.sh  defense.sh  eval.sh  openrouter_attack.sh  openrouter_defense.sh  paraphrasing.py  pyproject.toml
analysis/: asr.py  common.py  refusal.py
defense/: adashield.py  asd.py  common.py  openrouter_adashield.py  openrouter_asd.py  openrouter_reflection.py  reflection.py
evaluation/: common.py  harmbench.py  run_all.py  strongreject.py
evaluation/beavertails/: evaluate.py  moderation.py
experiments/: common.py  local.py  openrouter.py
utils/: helper.py
